# Copyright (C) 2024 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_python//python:defs.bzl", "py_test")

exports_files([
    "build.config.arm64",
    "build.config.riscv64",
    "build.config.x86_64",
    "pre_defconfig_fragment",
])

py_test(
    name = "pre_defconfig_fragments_menuconfig_test",
    srcs = ["pre_defconfig_fragments_menuconfig_test.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@io_abseil_py//absl/testing:absltest",
    ],
)

bzl_library(
    name = "bzl_lib",
    srcs = [
        "pre_defconfig_fragments_menuconfig_test.bzl",
    ],
    visibility = [
        "//build/kernel/kleaf/docs:__subpackages__",
    ],
)
