# Copyright (C) 2022 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load(":kernel_build_make_goals_test.bzl", "kernel_build_make_goals_test")
load(":kernel_build_strip_modules_test.bzl", "kernel_build_strip_modules_test")
load(":kernel_build_symtypes_test.bzl", "kernel_build_symtypes_test")
load(":kernel_toolchain_test.bzl", "kernel_toolchain_test")

kernel_build_strip_modules_test(name = "kernel_build_strip_modules_test")

kernel_build_make_goals_test(name = "kernel_build_make_goals_test")

kernel_build_symtypes_test(name = "kernel_build_symtypes_test")

kernel_toolchain_test(name = "kernel_toolchain_test")

test_suite(
    name = "kernel_build_test",
    tests = None,  # All tests in this package
)
