# Copyright (C) 2024 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_binary")
load(":native_binary_with_arg_test.bzl", "native_binary_with_arg_test")

cc_binary(
    name = "echo",
    srcs = ["echo.c"],
)

native_binary_with_arg_test(
    name = "echo_single",
    src = ":echo",
    args = ["1"],
)

native_binary_with_arg_test(
    name = "echo_space_in_args",
    src = ":echo",
    args = ["an argument"],
)

native_binary_with_arg_test(
    name = "echo_multiple",
    src = ":echo",
    args = [
        "1",
        "hello, world!",
    ],
)

native_binary_with_arg_test(
    name = "echo_selected_arg",
    src = ":echo",
    args = select({
        "@platforms//cpu:mips64": ["???"],
        "//conditions:default": ["1"],
    }) + ["2"],
)

native_binary_with_arg_test(
    name = "in_a_directory/echo",
    src = ":echo",
    args = ["1"],
)

native_binary_with_arg_test(
    name = "in_a_directory/aliased",
    src = ":echo",
    alias = "in_a/different_directory/alias",
    args = ["1"],
)

test_suite(
    name = "native_binary_with_arg_test",
    tests = [
        ":echo_multiple",
        ":echo_selected_arg",
        ":echo_single",
        ":echo_space_in_args",
        ":in_a_directory/aliased",
        ":in_a_directory/echo",
    ],
)
