# Copyright (C) 2025 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load(":combine_depset_test.bzl", "combine_depset_test")
load(":depset_equal_test.bzl", "depset_equal_test")

depset_equal_test(name = "depset_equal_test")

combine_depset_test(name = "combine_depset_test")

test_suite(
    name = "utils_test",
    tests = None,  # All tests in this package
)
