# Copyright (C) 2025 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@kleaf//build/kernel/kleaf:kernel.bzl", "ddk_module")

ddk_module(
    name = "example_pkvm_module",
    srcs = ["el1.c"],
    out = "example_pkvm_module.ko",
    kernel_build = "@kleaf//common:kernel_aarch64",

    # Adjust visibility of the module accordingly. See
    # https://bazel.build/concepts/visibility#target-visibility
    visibility = ["//build/kernel/kleaf/tests/ddk_examples:__subpackages__"],

    # Depends on the ddk_library that builds the hypervisor code.
    deps = [
        "//build/kernel/kleaf/tests/ddk_examples/pkvm/hyp",
    ],
)
